--- a/features/main-screen/build.gradle
+++ b/features/main-screen/build.gradle
@@ -1,5 +1,16 @@
 apply plugin: 'doctor-list-android-module'
 
 dependencies {
+    implementation project(":common")
 
+    implementation Libs.appcompat
+    implementation Libs.constraintlayout
+
+    implementation Libs.navigation_fragment_ktx
+    implementation Libs.navigation_ui_ktx
+
+    implementation Libs.lifecycle_extensions
+
+    implementation Libs.dagger
+    kapt Libs.dagger_compiler
 }
