--- a/repositories/offline/build.gradle
+++ b/repositories/offline/build.gradle
@@ -1,5 +1,10 @@
-apply plugin: 'doctor-list-kotlin-module'
+apply plugin: 'doctor-list-android-module'
 
 dependencies {
+    implementation Libs.dagger
+    kapt Libs.dagger_compiler
 
+    implementation "androidx.room:room-runtime:2.2.5"
+    kapt "androidx.room:room-compiler:2.2.5"
+    implementation "androidx.room:room-rxjava2:2.2.5"
 }
