Task-5[Doctor List Screen][New]: Implement doctor list presentation * Implemented UI * test test test * Support landscape orientation UI

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,8 +4,8 @@ dependencies {
     implementation Libs.appcompat
     implementation Libs.core_ktx
 
-    implementation Libs.rxjava
-    implementation Libs.rxandroid
+    api Libs.rxjava
+    api Libs.rxandroid
 
     implementation Libs.dagger
     kapt Libs.dagger_compiler
