--- a/features/doctor-list-screen/build.gradle
+++ b/features/doctor-list-screen/build.gradle
@@ -1,5 +1,21 @@
 apply plugin: 'doctor-list-android-module'
 
 dependencies {
+    implementation project(":common")
+    implementation project(":repositories")
+
+    testImplementation Libs.junit
+    testImplementation Libs.mockk
+    testImplementation Libs.core_testing
+
     implementation Libs.appcompat
+    implementation Libs.recyclerview
+    implementation Libs.constraintlayout
+    implementation Libs.cardview
+    implementation Libs.swiperefreshlayout
+
+    implementation Libs.dagger
+    kapt Libs.dagger_compiler
+
+    implementation Libs.coil
 }
