--- a/features/doctor-list-screen/build.gradle
+++ b/features/doctor-list-screen/build.gradle
@@ -1,5 +1,24 @@
 apply plugin: 'doctor-list-android-module'
 
 dependencies {
+    implementation project(":common")
+    implementation project(":repositories")
+
+    testImplementation Libs.junit
+    testImplementation Libs.mockk
+    testImplementation Libs.core_testing
+
     implementation Libs.appcompat
+    implementation Libs.recyclerview
+    implementation Libs.constraintlayout
+    implementation Libs.cardview
+    implementation Libs.swiperefreshlayout
+
+    implementation Libs.dagger
+    kapt Libs.dagger_compiler
+
+    implementation("io.coil-kt:coil:0.11.0")
+
+    implementation "androidx.paging:paging-runtime:2.1.2"
+    implementation "androidx.paging:paging-rxjava2-ktx:2.1.2"
 }
