Task-6[Doctor Details Screen][New]: Implement doctor details presentation

--- a/features/doctor-details-screen/build.gradle
+++ b/features/doctor-details-screen/build.gradle
@@ -1,5 +1,15 @@
 apply plugin: 'doctor-list-android-module'
 
 dependencies {
+    implementation project(":common")
+    
     implementation Libs.appcompat
+    implementation Libs.appcompat
+    implementation Libs.constraintlayout
+    implementation Libs.cardview
+
+    implementation Libs.dagger
+    kapt Libs.dagger_compiler
+
+    implementation Libs.coil
 }
